--- a/Microservice-Cartoes/src/main/resources/application.yml
+++ b/Microservice-Cartoes/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: mscartoes
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  rabbitmq:
+    host: localhost
+    port: 5672
+
 eureka:
   client:
     eureka-server-port: 8761
@@ -8,3 +17,7 @@ eureka:
     instance-id: ${spring.application.name}:${random.value}
 server:
   port: 0
+
+mq:
+  queues:
+    emissao-cartoes: emissao-cartoes
