--- a/Microservice-Gateway/src/main/resources/application.yml
+++ b/Microservice-Gateway/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/mscourserealm
   application:
     name: mscloudgateway
   cloud:
