--- a/Microservice-AvaliadorCredito/src/main/resources/application.yml
+++ b/Microservice-AvaliadorCredito/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     host: localhost
 eureka:
   client:
+    service-url:
+      defaultZone: http://user:user@localhost:8761/eureka/
     eureka-server-port: 8761
   instance:
     instance-id: ${spring.application.name}:${random.value}
