--- a/Microservice-Cartoes/src/main/resources/application.yml
+++ b/Microservice-Cartoes/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
 eureka:
   client:
     eureka-server-port: 8761
+    service-url:
+      defaultZone: http://user:user@localhost:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${random.value}
 server:
