--- a/Microservice-Gateway/src/main/resources/application.yml
+++ b/Microservice-Gateway/src/main/resources/application.yml
@@ -17,6 +17,8 @@ server:
   port: 8080
 eureka:
   client:
+    service-url:
+      defaultZone: http://user:user@localhost:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
     eureka-server-port: 8761
