--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,3 @@
 spring:
-  application:
-    name: eurekaserver
-  security:
-    user:
-      name: ${EUREKA_USERNAME}
-      password: ${EUREKA_PASSWORD}
-server:
-  port: 8761
-eureka:
-  client:
-    service-url:
-      defaultZone: http://user:user@eureka:8761/eureka/
-    register-with-eureka: false
-    fetch-registry: false
+  profiles:
+    active: "local"
