--- a/Microservice-Cartoes/src/main/resources/application-dev.yml
+++ b/Microservice-Cartoes/src/main/resources/application-dev.yml
@@ -1,14 +1,19 @@
 spring:
+  datasource:
+    url: jdbc:h2:tcp://database:1521/testdb
+    username: sa
+    password: password
+    driver-class-name: org.h2.Driver
   application:
-    name: msavaliadorcredito
+    name: mscartoes
   rabbitmq:
+    host: rabbitmq
     port: 5672
-    host: localhost
 eureka:
   client:
-    service-url:
-      defaultZone: http://user:user@eureka:8761/eureka/
     eureka-server-port: 8761
+    service-url:
+      defaultZone: eureka
   instance:
     instance-id: ${spring.application.name}:${random.value}
 server:
