--- a/Microservice-Cartoes/src/main/resources/application-local.yml
+++ b/Microservice-Cartoes/src/main/resources/application-local.yml
@@ -1,14 +1,19 @@
 spring:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driver-class-name: org.h2.Driver
   application:
-    name: msavaliadorcredito
+    name: mscartoes
   rabbitmq:
-    port: 5672
     host: localhost
+    port: 5672
 eureka:
   client:
-    service-url:
-      defaultZone: http://user:user@eureka:8761/eureka/
     eureka-server-port: 8761
+    service-url:
+      defaultZone: http://user:user@localhost:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${random.value}
 server:
