--- a/Microservice-Gateway/src/main/resources/application.yml
+++ b/Microservice-Gateway/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8081/realms/mscourserealm
+          issuer-uri: http://eureka:8081/realms/mscourserealm
   application:
     name: mscloudgateway
   cloud:
@@ -18,7 +18,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://user:user@localhost:8761/eureka/
+      defaultZone: eureka
     fetch-registry: true
     register-with-eureka: true
     eureka-server-port: 8761
